<resources>
    <string name="title_activity_main">Climby</string>
    <string name="title_activity_publish">Publicar</string>
    <!-- Generic -->
    <string name="app_name">Climby</string>
    <string name="title_discover">Descubre</string>
    <string name="title_publish">Publicar</string>
    <string name="title_profile">Mi perfil</string>
    <string name="prefs_file">com.app.climby.PREFERENCE_FILE_KEY</string>
    <string name="fcmServerKey">AAAAT_7_3l0:APA91bEJ48hCipuIfVEIS1nuMxNBFjoEYYdNsZk-YvOZLPAgVjoP9eadZovHVB1-PWgRpCe5e8-6FrTW_urCjso177feI2mJsS9IDtwTcJG5XsTXBzPQtmInwCh9-8xnVF_usXls7JWz</string>

    <!-- OnBoarding 0 -->
    <string name="onboarding.page0.name">Nombre</string>
    <string name="onboarding.page0.photo">Cambiar mi foto</string>
    <string name="onboarding.page0.title">¿Tu información es correcta?</string>
    <string name="onboarding.page0.hint.empty">…</string>
    <string name="onboarding.page0.phone">Teléfono</string>
    <string name="onboarding.page0.hint.prefix">+ 34</string>
    <string name="onboarding.page0.join">Lo usaremos como medio de contacto solo cuando quieras unirte a un grupo.</string>
    <string name="onboarding.page0.continue">Continuar</string>
    <string name="onboarding.page0.back">Atrás</string>

    <!-- OnBoarding 1 -->
    <string name="onboarding.page1.back">Atrás</string>
    <string name="onboarding.page1.title">¿Qué experiencia tienes?</string>
    <string name="onboarding.page1.beginner">Principiante</string>
    <string name="onboarding.page1.beginner.body">Estoy iniciándome en este mundo, tengo todo por aprender.</string>
    <string name="onboarding.page1.intermediate">Intermedio</string>
    <string name="onboarding.page1.intermediate.body">Escalo con frecuencia y me encuentro cómodo escalando en la naturaleza.</string>
    <string name="onboarding.page1.experienced">Experimentado</string>
    <string name="onboarding.page1.experienced.body">Llevo años escalando de manera continuada y me encuentro cómodo con cualquier modalidad.</string>
    <string name="onboarding.page1.continue">Continuar</string>

    <!-- OnBoarding 2 -->
    <string name="onboarding.page2.title">Valorar a los asistentes</string>
    <string name="onboarding.page2.lead">Deportiva en</string>
    <string name="onboarding.page2.date">La Pedriza, 31 Diciembre</string>
    <string name="onboarding.page2.name.user">Javier</string>
    <string name="onboarding.page2.send">Envía un mensaje a Javier</string>
    <string name="onboarding.page2.body.qualify">Cuenta cómo te sentiste escalando con el grupo o ayuda a Javier a mejorar para la próxima vez…</string>
    <string name="onboarding.page2.button.send">Enviar mi valoración</string>

    <!-- EditProfileActivity -->
    <string name="edit_profile.beginner">Principiante</string>
    <string name="edit_profile.intermediate">Intermedio</string>
    <string name="edit_profile.experienced">Experimentado</string>

    <string name="text_rocodromo">Rocódromo</string>
    <string name="text_clasica">Clásica</string>
    <string name="text_deportiva">Deportiva</string>
    <string name="text_boulder">Boulder</string>
    <string name="text_next_weekend">Próximo fín de semana</string>
    <string name="text_todas">Todas</string>
    <string name="text_google">Entrar con Google</string>
    <string name="text_facebook">Entrar con Facebook</string>
    <string name="text_join">Únete a otros escaladores como tú y sal a escalar de forma segura</string>
    <string name="text_example">Gracias por organizar esta salida. Ayer fué un día fantástico y aprendimos mogollón. La próxima vez llevo comida y no te dejo sin bocata.</string>
    <string name="text_province">Elige tu provincia</string>
    <string name="facebook_app_id">386355422974436</string>
    <string name="fb_login_protocol_scheme">fb386355422974436</string>
    <string name="text_exit_from">Próximas salidas desde </string>
    <string name="text_where_do_you_come_from">¿Desde donde sales?</string>
    <string name="text_date">DD/MM</string>
    <string name="text_date_discover">31 Diciembre</string>
    <string name="date">Fecha</string>
    <string name="text_places_available">Plazas disponibles</string>
    <string name="text_create_output">Crear salida</string>
    <string name="text_type">¿Qué tipo de escalada haréis?</string>
    <string name="text_select_school">Elige una escuela o rocódromo…</string>
    <string name="create_output">Crear una salida</string>
    <string name="edit_output">Editar salida</string>
    <string name="text_site">¿Dónde será la salida?</string>
    <string name="dont_valid">El número de teléfono no es válido.</string>
    <string name="problem_with_image">Ha habido un problema al cargar la imagen.</string>
    <string-array name="places">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string-array name="empty_list">
        <item>Selecciona el tipo de Escalada</item>
    </string-array>
    <string-array name="empty_province">
        <item>Seleccione su provincia</item>
    </string-array>
    <string name="text_my_outings">Mis salidas</string>
    <string name="text_coming_outings">Proximas salidas</string>
    <string name="text_edit">Editar</string>
    <string name="text_user_name">Usuario</string>
    <string name="text_save">Guardar</string>
    <string name="text_save_changes">Guardar cambios</string>
    <string name="text_logout">Cerrar sesión</string>
    <string name="text_where_will_you_climb">¿Dondé vas a escalar?</string>
    <string name="text_experience">Experiencia</string>
    <string name="text_edit_information">Editar tu información</string>
    <string name="text_places">Pedir unirme 4 plazas</string>
    <string name="text_travel">Viaje</string>
    <string name="text_admin">Organizador</string>
    <string name="text_passenger">Asistentes</string>
    <string name="text_select">Seleccione…</string>
    <string name="text_exits">13 Salidas</string>
    <string name="text_trip_empty">Parece que no hay salidas con estas opciones de búsqueda.\n ¡Anímate y créala tú!</string>
    <string name="text_trip_empty_profile">Aún no has publicado salidas.\n ¡Animate y crea una!</string>
    <string name="text_trip_empty_profile_1">No estás apuntado a ninguna salida. Descubre y apúntate a nuevas salidas.</string>
    <string name="text_bad_connection">Ha habido un problema al cargar las salidas</string>
    <string name="text_not_connection">Sin conexión a Internet</string>
    <string name="text_not_connection_1">No hay conexión</string>
    <string name="text_retry">REINTENTAR</string>
    <string name="text_madrid">Madrid</string>
    <string name="text_delete_exit">Eliminar salida</string>
    <string name="text_sure">¿Estás seguro?</string>
    <string name="text_asistance">En caso de tener asistentes confirmados, perderás el conacto a través de climby."</string>
    <string name="text_contact">Perderás el conacto a través de climby."</string>
    <string name="text_qualify_attendes">¿Quieres enviar la valoración igualmente?</string>
    <string name="cancel">cancelar</string>
    <string name="text_delete">Eliminar</string>
    <string name="text_send_button">Enviar</string>
    <string name="text_request">Peticiones</string>
    <string name="text_accept">Aceptar</string>
    <string name="text_contact_by_whatsapp">Contactar por Whatsapp</string>
    <string name="text_refuse">Rechazar</string>
    <string name="text_explication">¿Quieres darle una explicación?</string>
    <string name="text_honest">Sé honesto y cordial. Quizás haya otras oportunidades.</string>
    <string name="basic_channel_id">basic_channel_id</string>
    <string name="basic_channel_name">basic_channel_name</string>
    <string name="basic_channel_description">basic_channel_description</string>
    <string name="text_resume_trip">Resumen de la salida</string>
    <string name="text_private_message_1">El mensaje privado a</string>
    <string name="text_private_message_2">está vacío.</string>
    <string name="text_if_cancel">Si cancelas la valoración ya no podrás volver a valorar esta salida</string>
    <string name="text_0">0</string>
    <string name="text_one">1</string>
    <string name="select">Seleccione…</string>
    <string name="title_activity_main_compose">MainActivityCompose</string>
</resources>