<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.discover.DiscoverFragment">

    <LinearLayout
        android:id="@+id/LYDiscover_outputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TVNextExits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_exit_from"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/SPCommunity"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:background="@color/background"
            android:entries="@array/empty_list"
            android:layout_gravity="center"
            android:padding="0dp"
            android:spinnerMode="dialog"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <ImageView
        android:id="@+id/IVEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="-5dp"
        android:src="@drawable/ic_baseline_arrow_drop_down_24"
        app:layout_constraintBottom_toBottomOf="@+id/LYDiscover_outputs"
        app:layout_constraintStart_toEndOf="@+id/LYDiscover_outputs"
        app:layout_constraintTop_toTopOf="@+id/LYDiscover_outputs"
        app:tint="@color/primary" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LYDiscover_outputs">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingEnd="30dp"
            app:checkedButton="@+id/BTAll"
            app:selectionRequired="true"
            app:singleSelection="true"
            tools:ignore="RtlSymmetry">

            <Button
                android:id="@+id/BTAll"
                style="@style/toggle_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetRight="5dp"
                android:insetBottom="0dp"
                android:maxLines="1"
                android:stateListAnimator="@null"
                android:text="@string/text_todas"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:shapeAppearance="@style/Cut" />

            <Button
                android:id="@+id/BTNextWeekend"
                style="@style/toggle_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="5dp"
                android:insetTop="0dp"
                android:insetRight="5dp"
                android:insetBottom="0dp"
                android:maxLines="1"
                android:stateListAnimator="@null"
                android:text="@string/text_next_weekend"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BTBoulder"
                style="@style/toggle_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="5dp"
                android:insetTop="0dp"
                android:insetRight="5dp"
                android:insetBottom="0dp"
                android:maxLines="1"
                android:stateListAnimator="@null"
                android:text="@string/text_boulder"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BTLead"
                style="@style/toggle_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="5dp"
                android:insetTop="0dp"
                android:insetRight="5dp"
                android:insetBottom="0dp"
                android:maxLines="1"
                android:stateListAnimator="@null"
                android:text="@string/text_deportiva"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BTRocodromo"
                style="@style/toggle_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="5dp"
                android:insetTop="0dp"
                android:insetRight="5dp"
                android:insetBottom="0dp"
                android:maxLines="1"
                android:stateListAnimator="@null"
                android:text="@string/text_rocodromo"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BTClassic"
                style="@style/toggle_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="5dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:maxLines="1"
                android:stateListAnimator="@null"
                android:text="@string/text_clasica"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:shapeAppearance="@style/Cut" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CLTripsEmpty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <TextView
            android:id="@+id/TVTripEmpty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:text="@string/text_trip_empty"
            android:textColor="@color/grey"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/IVHandEmpty"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/hand"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CLBadConnection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <TextView
            android:id="@+id/TVBadConnection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:text="@string/text_bad_connection"
            android:textColor="@color/grey"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/TVRetry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/TVRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/text_retry"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVTrips"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <ProgressBar
        android:id="@+id/PBDiscover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>