<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/IVBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24"
        app:tint="@color/black"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/TVRefuseTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_explication"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BTRefuseTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0"
        app:cornerRadius="50dp"
        android:stateListAnimator="@null"
        android:text="@string/text_refuse"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETRefuseTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:hint="@string/text_honest"
        android:inputType="textMultiLine"
        android:letterSpacing="0"
        android:maxLength="250"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/BTRefuseTrip"
        app:layout_constraintEnd_toEndOf="@+id/BTRefuseTrip"
        app:layout_constraintStart_toStartOf="@+id/BTRefuseTrip"
        app:layout_constraintTop_toBottomOf="@+id/TVRefuseTrip"
        tools:ignore="Autofill" />

</androidx.constraintlayout.widget.ConstraintLayout>