<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/TVSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_travel"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_admin"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/CVAdmin"
        app:layout_constraintTop_toBottomOf="@+id/TVSite" />

    <TextView
        android:id="@+id/TVAssistants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_passenger"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/TVAdmin"
        app:layout_constraintTop_toBottomOf="@+id/CVAdmin" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CVAdmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVAdmin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/IVStart1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/star"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/IVStart2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/IVStart1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/star"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/IVStart3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/IVStart2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/star"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/TVExitsAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_exits"
                android:textColor="#C3C3C3"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/TVVAdmin"
                app:layout_constraintTop_toBottomOf="@+id/TVVAdmin" />

            <TextView
                android:id="@+id/TVVAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/text_name"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/CIVAdmin"
                app:layout_constraintTop_toTopOf="@+id/CIVAdmin" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/CIVAdmin"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:src="@mipmap/user"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/IVBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/TVSite"
        app:layout_constraintStart_toStartOf="@+id/TVAdmin"
        app:layout_constraintTop_toTopOf="@+id/TVSite"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        app:tint="@color/black"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVAssistants"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVAssistants" />

</androidx.constraintlayout.widget.ConstraintLayout>